# simplicity

./: .gitignore  CMakeLists.txt  README.md  simplicity-common.cmake
com.se.devenvy/: .classpath  .project  SECheckstyle.xml  SEJavaFormatter.xml  build.xml
com.se.devenvy.test/: .classpath  .project
com.se.devenvy.test/properties/: log4j.properties
com.se.simplicity/: .checkstyle  .classpath  .project  javadoc.xml
com.se.simplicity.editor/: .classpath  .project  plugin.xml
com.se.simplicity.editor.test/: .classpath  .project
com.se.simplicity.jogl/: .classpath  .project
com.se.simplicity.jogl.test/: .classpath  .project
com.se.simplicity.test/: .classpath  .project
com.se.simplicity.util/: .classpath  .project
com.se.simplicity.util.test/: .classpath  .project
devenvy/: .cproject  .project
devenvy_test/: .checkstyle  .cproject  .project
simplicity/: .cproject  .project  CMakeLists.txt  simplicity-common.cmake  simplicity.vcxproj
simplicity-demo/: .cproject  .project
simplicity-demo-core/: .cproject  .project
simplicity-demo-opengl/: .cproject  .project
simplicity-editor/: .classpath  .project  plugin.xml
simplicity-freeglut/: .cproject  .project
simplicity-opengl/: .cproject  .project
simplicity-opengl-demo/: .cproject  .project
simplicity-opengl-test/: .cproject  .project
simplicity-test/: .cproject  .project
simplicity-util/: .classpath  .project
simplicity_opengl/: .cproject  .project
simplicity_opengl_demo/: .cproject  .project
simplicity_opengl_test/: .cproject  .project
simplicity_test/: .cproject  .project
(+1630 files in other folders)
